GNOME Bugzilla – Bug 701647
gnonlin composition didn't speak a very good english.
Last modified: 2013-07-23 12:57:54 UTC
Created attachment 246072 [details] [review] Proposed patch to fix the issue I'm usually quite resilient to english mistakes but this one was really all over the place.
I hope this is not conflicting with any of your, Nicolas' and Thibault's branches? :)
Review of attachment 246072 [details] [review]: Sorry for the long delay, it's all good with me for now. At least it will help me not to fall into such a trap while changing this code ;-D
commit f3b7ed54cef7b8e1baf949833e2cac32e6fe88b0 Author: Mathieu Duponchelle <mathieu.duponchelle@epitech.eu> Date: Wed Jun 5 15:14:54 2013 +0200 gnlcomposition: grammar (childs -> children) https://bugzilla.gnome.org/show_bug.cgi?id=701647