gnlcomposition: grammar (childs -> children)

https://bugzilla.gnome.org/show_bug.cgi?id=701647